--- a/store/templates/store/boutique.html
+++ b/store/templates/store/boutique.html
@@ -11,7 +11,7 @@
         <div class="search-box">
             <div class="search-field">
                 <input type="text" class="input" placeholder="Recherche">
-                <img width="30px" src="image/search-icon.png" alt="">
+                <img width="30px" src="{% static 'icons/search-icon.png' %}" alt="">
             </div>
         </div>
     </section>
