--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,8 @@
 {% include 'footer.html' %}
 
 <script src="{% static 'script/index.js' %}"></script>
-<script src="{% static 'script/product_detail.js' %}"></script>
+
+<!--<script src="{% static 'script/product_detail.js' %}"></script>-->
 
 </body>
 </html>
