--- a/templates/footer.html
+++ b/templates/footer.html
@@ -13,8 +13,8 @@
         <div class="part-footer">
             <ul>
                 <h5>LIENS</h5>
-                <li><a href="">Accueil</a></li>
-                <li><a href="">Boutique</a></li>
+                <li><a href="{% url 'index' %}">Accueil</a></li>
+                <li><a href="{% url 'boutique' %}">Boutique</a></li>
                 <li><a href="">A propos</a></li>
                 <li><a href="">Contactez-nous</a></li>
             </ul>
