--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -6,11 +6,12 @@
     <!-- <h1>S'inscrire</h1> -->
 
     <!-- <img src="Logo-removebg-preview.png" width="200px" alt=""> -->
-    <div class="sub-container">
+    <form class="sub-container">
 
-      <div class="container">
-        <form class="sign-form" action="" method="POST">
-          {% csrf_token %}
+      <form  class="container" action="" method="POST">
+        {% csrf_token %}
+
+        <div class="sign-form" >
           <h2>Informations personnelles</h2>
           <p>Prière de fournir les détails suivants pour compléter votre inscription :</p>
 
@@ -51,10 +52,10 @@
           <div class="btn-form">
             <button type="submit" onclick="scrollRight()">Suivant</button>
           </div>
-        </form>
+        </div>
 
-        <form class="sign-form" action="" method="get">
-          {% csrf_token %}
+        <div class="sign-form" >
+
 
 
 
@@ -101,10 +102,9 @@
             <button type="button" onclick="scrollLeftPerso()">Précédent</button>
 
           </div>
-        </form>
+        </div>
 
-        <form class="sign-form" action="" method="post">
-        {% csrf_token %}
+        <div class="sign-form" >
 
           <h2>Sécurité</h2>
           <p>Veuillez remplir le formulaire d'inscription :</p>
@@ -141,8 +141,8 @@
             <button type="button" onclick="scrollLeftPerso()">Précédent</button>
 
           </div>
-        </form>
-      </div>
+        </div>
+      </form>
     </div>
   </div>
 
