--- a/store/static/css/index.css
+++ b/store/static/css/index.css
@@ -20,6 +20,7 @@ header{
 }
 a{
     text-decoration: none;
+    color: black;
 }
 h1{
     margin: 0;
@@ -65,13 +66,13 @@ ul{
     display: flex;
     align-items: center;
 }
-.div-header img{
+.div-header .icon-header{
     margin: 0 5px;
     opacity: .2;
     transition: opacity .5s ease-out;
 
 }
-.div-header a img:hover{
+.div-header .icon-header:hover{
     opacity: 1;
 
 }
@@ -87,11 +88,8 @@ ul{
     background-color: #D9D9D9;
 }
 
+
 .settings-user{
-    display:flex;
-    align-items:center;
-    justify-content: center;
-    padding: 5px 10px;
     margin-left: 20px;
     background-color: #F6F6F6;
     text-transform: capitalize;
@@ -99,11 +97,62 @@ ul{
     cursor: pointer;
     box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
-.settings-user:hover{
-    background-color:#D9D9D9;
+
+.show-list-user:hover{
+    background-color:#ecebeb;
 }
-.settings-user span{
-    margin: 10px 10px;
+
+.settings-user img{
+    opacity: 0.5;
+    margin-right: 10px;
+    margin-left: 5px;
+
+}
+.settings-user .droplist-user img{
+    width: 35px;
+    border-radius: 50%;
+    background-color: #e5e5e5;
+    padding: 7px;
+}
+.settings-user hr{
+    margin: 0 20px;
+    border: 1px solid #e5e5e5;
+}
+.droplist-user{
+    position: absolute;
+    top: 85%;
+    width: 250px;
+    right: 1%;
+    background-color: #F6F6F6;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s;
+    border-radius: 2px;
+}
+.droplist-user.open-menu{
+    max-height: 400px;
+}
+
+.droplist-user a{
+    display: flex;
+    align-items: center;
+    padding: 5px 10px ;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.show-list-user{
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    padding: 10px 15px 10px 10px;
+
+}
+.droplist-user a:hover{
+    background-color:#ecebeb;
+
+}
+.droplist-user p{
+    width: 100%;
 }
 
 .section-slide{
@@ -336,7 +385,7 @@ ul{
     bottom: 10px;
     left: 0;
     right: 0;
-    height: 25%;
+    height: 23%;
     padding: 10px;
     text-align: center;
     background-color: white;
