--- a/templates/accountManagerBase.html
+++ b/templates/accountManagerBase.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'css/accountManager.css' %}">
-  <title>Document</title>
+  <title>{{ current_url_name }}</title>
 </head>
 <body>
 
