--- a/templates/header.html
+++ b/templates/header.html
@@ -7,12 +7,27 @@
             </ul>
         </nav>
         <div class="div-header">
-            <a href=""><img width="30px" src="{% static 'icons/favoris-incone3.png' %}" title="Favoris" alt=""></a>
-            <a href=""><img width="30px" src="{% static 'icons/panier-icone.png' %}" title="Panier" alt=""></a>
+            <a href=""><img class="icon-header" width="30px" src="{% static 'icons/favoris-incone3.png' %}" title="Favoris" alt=""></a>
+            <a href=""><img class="icon-header" width="30px" src="{% static 'icons/panier-icone.png' %}" title="Panier" alt=""></a>
             {% if user.is_authenticated %}
-            <div class="settings-user">
-                <img width="30px" src="{% static 'icons/user-icon.png' %}">
-                <span>{{ user.username }}</span>
+            <div class="settings-user" onclick="toggleMenu()">
+                <div class="show-list-user">
+                    <img width="30px" src="{% static 'icons/user-icon.png' %}">
+                    <span>{{ user.username }}</span>
+                </div>
+                <div class="droplist-user" id="droplist">
+                    <a href="">
+                        <img src="{% static 'icons/profil-icon.png' %}" alt="">
+                        <p>Profile</p>
+                        <span>></span>
+                    </a>
+                    <hr>
+                    <a href="{% url 'logout' %}">
+                        <img src="{% static 'icons/logout-icon.png' %}" alt="">
+                        <p>Deconnexion</p>
+                        <span>></span>
+                    </a>
+                </div>
             </div>
          
             <!--<a href="{% url 'logout' %}">Deconnexion</a>-->
