--- a/store/templates/store/product.html
+++ b/store/templates/store/product.html
@@ -6,7 +6,7 @@
     <div class="product-image">
         <div class="slide-wrapper">
             <div class="inner-wrapper">
-                <img class="slide" src="image/jeune-femme-dans-parc-automne.jpg" alt=""><img class="slide"
+                <img class="slide" src="{{ product.thumbnail.url }}" alt=""><img class="slide"
                     src="image/etudiant-afro-americain-marchant-dans-parc.jpg" alt=""><img class="slide"
                     src="image/chemise-pour-homme-podshoe.jpg" alt=""><img class="slide"
                     src="image/femme-telephone.jpg" alt="">
@@ -18,7 +18,7 @@
         </div>
 
         <div class="inner-wrapper-small">
-            <img class="slide2" src="image/jeune-femme-dans-parc-automne.jpg" alt=""><img class="slide2"
+            <img class="slide2" src="{{ product.thumbnail.url }}" alt=""><img class="slide2"
                 src="image/etudiant-afro-americain-marchant-dans-parc.jpg" alt=""><img class="slide2"
                 src="image/jeune-femme-dans-parc-automne.jpg" alt=""><img class="slide2"
                 src="image/jeune-femme-dans-parc-automne.jpg" alt="">
