--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -19,7 +19,7 @@
             <li><a class="a-next" onclick="nextSlide();" href="#"><img width="40px" src="{% static 'icons/next-icon.png' %}" alt=""></a></li>
         </ul>
 
-        <ul class="pagination">
+        <ul class="pagination-slide">
             <li class="dot active"></li>
             <li class="dot"></li>
             <li class="dot"></li>
