--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="{% static 'script/index.js' %}"></script>
-<script src="{% static 'script/product_detail.js' %}"></script>
+<!--<script src="{% static 'script/product_detail.js' %}"></script>-->
 
 </body>
 </html>
